# Capacitacao-Fabrica-de-Software-2020

./: README.md
tutorialpress/: .gitignore  pyproject.toml
tutorialpress/tests/integration/: test_categoria.py  test_publicacao.py
tutorialpress/tutorialpress/: settings.py  urls.py
tutorialpress/tutorialpress/core/: router.py
tutorialpress/tutorialpress/core/migrations/: 0001_initial.py  0002_categoria.py  0003_publicacao_categoria.py  0004_categoria_categoria_pai.py
tutorialpress/tutorialpress/core/models/: categoria.py  publicacao.py
tutorialpress/tutorialpress/core/serializers/: __init__.py  categoria.py  publicacao.py
tutorialpress/tutorialpress/core/views/: publicacao.py
